Add more licenses

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-gospace
-happening
-happening-server
+/happening
+/happening-server
 coverage.out
 tags
+!gospace/src/github.com/flori/happening
+gospace
