--- a/webui/package.json
+++ b/webui/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.0",
-    "@material-ui/icons": "^3.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "json-align": "^0.1.0",
     "moment": "^2.24.0",
     "node-fetch": "2.6.1",
@@ -17,7 +18,7 @@
     "react-google-charts": "^3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
-    "serve": "^10.1.1",
+    "serve": "^11.3.2",
     "universal-cookie": "^3.0",
     "unstated": "^2.1.1",
     "webfontloader": "^1.6.28"
