--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - "6666:5432"
     volumes:
-      - "./data/postgresql:/var/lib/postgresql:rw"
+      - "./data/postgresql:/var/lib/postgresql:delegated"
     environment:
       - "POSTGRES_PASSWORD=secret"
