--- a/webui/package.json
+++ b/webui/package.json
@@ -29,10 +29,13 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "resolutions": {
+    "immer": "^8.0.1"
+  },
   "browserslist": [
-    ">0.2%",
+    ">1%",
     "not dead",
-    "not ie <= 11",
+    "not ie",
     "not op_mini all"
   ]
 }
