--- a/webui/package.json
+++ b/webui/package.json
@@ -10,6 +10,7 @@
     "json-align": "^0.1.0",
     "moment": "^2.24.0",
     "node-fetch": "2.6.1",
+    "pretty-bytes": "^5.6.0",
     "prop-types": "^15.6.2",
     "qs": "^6.9.4",
     "react": "^16.2.0",
