--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: make push-latest
+      run: docker login -u flori303 -p ${{ secrets.DOCKER_BUILDER_TOKEN }}; make push-latest
