--- a/webui/package.json
+++ b/webui/package.json
@@ -31,7 +31,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "resolutions": {},
+  "resolutions": {
+    "nth-check": "^2.1"
+  },
   "browserslist": [
     ">1%",
     "not dead",
