--- a/.github/workflows/snyk-container.yml
+++ b/.github/workflows/snyk-container.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         image: happening
         args: --file=Dockerfile
+        sarif: true
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v2
       with:
