--- a/webui/package.json
+++ b/webui/package.json
@@ -8,6 +8,7 @@
     "ansi-html-community": "0.0.8",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
+    "history": "^5.3.0",
     "json-align": "^0.1.0",
     "moment": "^2.29.4",
     "node-fetch": "3.3.0",
