--- a/webui/package.json
+++ b/webui/package.json
@@ -11,6 +11,7 @@
     "json-align": "^0.1.0",
     "moment": "^2.29.4",
     "node-fetch": "3.2.10",
+    "nth-check": "^2.1",
     "pretty-bytes": "^5.6.0",
     "prop-types": "^15.6.2",
     "qs": "^6.10.4",
