--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,6 +40,10 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+    - name: Setup GO
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.21.7'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
