--- a/webui/package.json
+++ b/webui/package.json
@@ -8,6 +8,7 @@
     "ansi-html-community": "0.0.8",
     "axios": "^1.6.5",
     "classnames": "^2.3.3",
+    "history": "^5.3.0",
     "json-align": "^0.1.0",
     "moment": "^2.30.0",
     "node-fetch": "3.3.2",
@@ -40,5 +41,11 @@
     "not dead",
     "not ie 11",
     "not op_mini all"
-  ]
+  ],
+  "pnpm": {
+    "overrides": {
+      "postcss@<8.4.31": ">=8.4.31",
+      "nth-check@<2.0.1": ">=2.0.1"
+    }
+  }
 }
