--- a/webui/package.json
+++ b/webui/package.json
@@ -6,23 +6,23 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "ansi-html-community": "0.0.8",
-    "axios": "^1.6.5",
-    "classnames": "^2.3.3",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "history": "^5.3.0",
     "json-align": "^0.1.0",
-    "moment": "^2.30.0",
+    "moment": "^2.30.1",
     "node-fetch": "3.3.2",
-    "nth-check": "^2.1",
+    "nth-check": "^2.1.1",
     "pretty-bytes": "^5.6.0",
-    "prop-types": "^15.6.2",
-    "qs": "^6.11.2",
+    "prop-types": "^15.8.1",
+    "qs": "^6.12.1",
     "react": "^16.14.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^16.14.0",
-    "react-google-charts": "^4.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^5.3.4",
-    "serve": "^14.2.0",
-    "universal-cookie": "^3.0",
+    "serve": "^14.2.3",
+    "universal-cookie": "^3.1.0",
     "unstated": "^2.1.1",
     "webfontloader": "^1.6.28"
   },
@@ -45,7 +45,9 @@
   "pnpm": {
     "overrides": {
       "postcss@<8.4.31": ">=8.4.31",
-      "nth-check@<2.0.1": ">=2.0.1"
+      "nth-check@<2.0.1": ">=2.0.1",
+      "ws@>=8.0.0 <8.17.1": ">=8.17.1",
+      "ws@>=7.0.0 <7.5.10": ">=7.5.10"
     }
   }
 }
