--- a/webui/package.json
+++ b/webui/package.json
@@ -6,20 +6,20 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "ansi-html-community": "0.0.8",
-    "axios": "^1.7.3",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "history": "^5.3.0",
     "json-align": "^0.1.0",
     "moment": "^2.30.1",
     "node-fetch": "3.3.2",
     "nth-check": "^2.1.1",
-    "pretty-bytes": "^5.6.0",
+    "pretty-bytes": "^6.1.1",
     "prop-types": "^15.8.1",
     "qs": "^6.13.0",
     "react": "^16.14.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^16.14.0",
-    "react-google-charts": "^4.0.1",
+    "react-google-charts": "^5.1.0",
     "react-router-dom": "^5.3.4",
     "serve": "^14.2.3",
     "universal-cookie": "^3.1.0",
@@ -27,7 +27,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -42,12 +42,5 @@
     "not ie 11",
     "not op_mini all"
   ],
-  "pnpm": {
-    "overrides": {
-      "postcss@<8.4.31": ">=8.4.31",
-      "nth-check@<2.0.1": ">=2.0.1",
-      "ws@>=8.0.0 <8.17.1": ">=8.17.1",
-      "ws@>=7.0.0 <7.5.10": ">=7.5.10"
-    }
-  }
+  "pnpm": { }
 }
