Upgrade dependencies in webui package
- Updated `browserslist` configuration to use **0.25%** instead of **1%**
- Added support for last 2 Chrome major versions and op_mini all

--- a/webui/package.json
+++ b/webui/package.json
@@ -37,10 +37,10 @@
     "eject": "react-scripts eject"
   },
   "browserslist": [
-    ">1%",
+    ">0.25%",
     "not dead",
-    "not ie 11",
-    "not op_mini all"
+    "not op_mini all",
+    "last 2 Chrome major versions"
   ],
   "pnpm": { }
 }
