--- a/webui/package.json
+++ b/webui/package.json
@@ -12,7 +12,6 @@
     "json-align": "^0.1.0",
     "moment": "^2.30.1",
     "node-fetch": "3.3.2",
-    "nth-check": "^2.1.1",
     "pretty-bytes": "^6.1.1",
     "prop-types": "^15.8.1",
     "qs": "^6.13.0",
@@ -22,12 +21,17 @@
     "react-google-charts": "^5.1.0",
     "react-router-dom": "^5.3.4",
     "serve": "^14.2.3",
-    "universal-cookie": "^7.0.0",
-    "unstated": "^2.1.1",
-    "webfontloader": "^1.6.28"
+		"webfontloader": "1.6.28",
+    "universal-cookie": "^7.2.0",
+    "unstated": "^2.1.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.7",
+    "@svgr/plugin-svgo": "5.5.0",
+    "@svgr/webpack": "5.5.0",
+    "nth-check": "^2.1.1",
+    "path-to-regexp": "^3.3.0",
+    "postcss": "^8.4.47",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -42,5 +46,14 @@
     "not op_mini all",
     "last 2 Chrome major versions"
   ],
-  "pnpm": { }
+  "pnpm": {
+    "overrides": {
+      "postcss@<8.4.31": "^8.4.47",
+      "nth-check@<2.0.1": "^2.1.1",
+      "ws@>=8.0.0 <8.17.1": "^8.17.1",
+      "ws@>=7.0.0 <7.5.10": "^7.5.10",
+      "path-to-regexp": "^3.3.0",
+      "cookie": "^0.7.0"
+    }
+  }
 }
